test/classes/initializers/errors/lhsConsRhsInit.good
lhsConsRhsInit.chpl:18: error: type mismatch in assignment from unmanaged hasInit to unmanaged hasConstruct
